--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -67,7 +67,7 @@
         <a href="{{ post.paperurl }}" class="btn--research" aria-hidden="true">Paper</a>
       {% endif %}
       {% if post.code %}
-        <a href="{{ post.code }}"><i class="fas fa-fw fa-code zoom" aria-hidden="true"></i></a>
+        <a href="{{ post.code }}" class="btn--research" aria-hidden="true">Code</a>
       {% endif %}
       {% if post.github %}
         <a href="{{ post.github }}"><i class="fab fa-fw fa-github zoom" aria-hidden="true"></i></a>
